# kaditaj-api

./: LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg
api/: urls.py
api/views/: __init__.py  auto_complete.py  create.py  list.py
django_kaditaj_api.egg-info/: PKG-INFO  SOURCES.txt
