[metadata]
name = django-kaditaj-api
version = 1.0.4
description = Django CMS api developed by Kaditaj SARL
long_description = file: README.rst
url = https://github.com/tbro2020/kaditaj-api
author = Christian TABARO
author_email = christian@tabaro.me
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    
[options]
include_package_data = true
packages = find:
python_requires = >=3.8